Fix transform and z-index transition

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,7 +31,7 @@ body{
     position:absolute;
     align-items: center;
     transform: translateY(0%);
-    transition: transform 0.5s, ease-in;
+    transition: transform 0.3s ease-in-out, z-index 0.7s;
     background-color: rgba(255,255,255,0.5);
     border-radius:15px 15px 0 0;
     padding:10px 0;
@@ -50,6 +50,7 @@ h4{
     transform: translateY(-120%);
     opacity:1;
     z-index:0;
+    
 }
 .img-container{
     width:110px;
